--- a/src/components/ingredient-element/ingredient-element.module.css
+++ b/src/components/ingredient-element/ingredient-element.module.css
@@ -1,8 +1,10 @@
 .element{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 272px;
+    cursor: pointer;
 }
 
 .name{
@@ -13,4 +15,10 @@
     display: flex;
     align-items: center;
     gap: 8px;
+}
+
+.counter{
+    position: absolute;
+    top:0;
+    right: 0;
 }
