--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,9 +1,9 @@
 .header{
-    padding-top: 40px;
     display: flex;
     justify-content: center;
     width: 100%;
-    min-height: 88px
+    min-height: 88px;
+    background: #1C1C21;
 }
 
 .content{
