--- a/src/HOCs/popup/popup.module.css
+++ b/src/HOCs/popup/popup.module.css
@@ -9,3 +9,10 @@
     box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
     border-radius: 40px;
 }
+
+.close{
+    position: absolute;
+    top: 60px;
+    right: 40px;
+    cursor: pointer;
+}
