--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -6,5 +6,9 @@
 }
 
 .table{
-    border-spacing: 20px 8px;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    text-align: center;
 }
